-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
-
3
-
b4ed50f00 (dev), 7347bd38d (6.9), 4e9bda139 (6.8)
-
Foundation Sprint 129
Quick dialogs and templates fail to compile if Qt draganddrop feature is disabled.
The causal chain is:
- Qt configured with -no-feature-draganddrop'
- => quick_draganddrop gets disabled
- => many files are taken into build only if quick_draganddrop (&& quick_listview) are defined
- => dialogs and templates don't find these files
- clones
-
QTBUG-135722 Compile Android without desktopservices -feature
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135740 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 637876,4 | Fix compilation when draganddrop support is disabled | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 638693,3 | Fix compilation when draganddrop support is disabled | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 638862,2 | Fix compilation when draganddrop support is disabled | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |