Fix compilation when draganddrop support is disabled

When Qt is configured with -no-feature-draganddrop, the
quick_draganddrop feature gets disabled too. Consequently many dialog
files are then omitted from the build, see
src/quickdialogs/quickdialogsquickimpl/CMakeLists.txt.

As a result, some dialogs and templates that include and use
these files/classes unconditionally, fail to compile. This commit
adds same feature guards to these includes/uses.

In addition this commit adds the few missing 'drag' feature
guards in QQuickVerticalHeaderView as well as adds appropriate
feature guards to autotests.

Pick-to: 6.9 6.8
Fixes: QTBUG-135740
Change-Id: If1688a3cd8f52918088a8c586d54ccf09cb08890
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>