src/quickcontrolstestutils/dialogstestutils.cpp
@@ -13,7 +13,7 @@
 #include <QtQuickTemplates2/private/qquickabstractbutton_p.h>
 #include <QtQuickTemplates2/private/qquickapplicationwindow_p.h>
 #include <QtQuickTemplates2/private/qquickdialogbuttonbox_p.h>
-#if QT_CONFIG(quick_listview)
+#if QT_CONFIG(quick_listview) && QT_CONFIG(draganddrop)
 #include <QtQuickDialogs2QuickImpl/private/qquickfiledialogdelegate_p.h>
 #include <QtQuickDialogs2QuickImpl/private/qquickfolderbreadcrumbbar_p.h>
 #include <QtQuickDialogs2QuickImpl/private/qquickfolderbreadcrumbbar_p_p.h>
@@ -21,7 +21,7 @@
 
 QT_BEGIN_NAMESPACE
 
-#if QT_CONFIG(quick_listview)
+#if QT_CONFIG(quick_listview) && QT_CONFIG(draganddrop)
 bool QQuickDialogTestUtils::verifyFileDialogDelegates(QQuickListView *fileDialogListView,
     const QStringList &expectedFiles, QString &failureMessage)
 {
@@ -111,7 +111,7 @@ bool QQuickDialogTestUtils::verifyBreadcrumbDelegates(QQuickFolderBreadcrumbBar 
 
     return true;
 }
-#endif
+#endif // QT_CONFIG(quick_listview) && QT_CONFIG(draganddrop)
 
 QQuickAbstractButton *QQuickDialogTestUtils::findDialogButton(QQuickDialogButtonBox *box, const QString &buttonText)
 {
