src/quickdialogs/quickdialogs/qquickfolderdialog.cpp
@@ -5,8 +5,10 @@
 
 #include <QtCore/qloggingcategory.h>
 #include <QtQml/qqmlfile.h>
+#if QT_CONFIG(quick_listview) && QT_CONFIG(quick_draganddrop)
 #include <QtQuickDialogs2QuickImpl/private/qquickplatformfolderdialog_p.h>
 #include <QtQuickDialogs2QuickImpl/private/qquickfolderdialogimpl_p.h>
+#endif
 
 QT_BEGIN_NAMESPACE
 
@@ -257,8 +259,10 @@ void QQuickFolderDialog::onShow(QPlatformDialogHelper *dialog)
         if (m_firstShow && initialDir.isValid() && QDir(QQmlFile::urlToLocalFileOrQrc(initialDir)).exists())
             fileDialog->setDirectory(m_options->initialDirectory());
     }
+#if QT_CONFIG(quick_listview) && QT_CONFIG(quick_draganddrop)
     if (QQuickPlatformFolderDialog *folderDialog = qobject_cast<QQuickPlatformFolderDialog *>(dialog))
         folderDialog->dialog()->setPopupType(m_popupType);
+#endif
 
     QQuickAbstractDialog::onShow(dialog);
 }
