src/quickdialogs/quickdialogs/qquickfontdialog.cpp
@@ -4,8 +4,10 @@
 #include "qquickfontdialog_p.h"
 
 #include <QtCore/qloggingcategory.h>
+#if QT_CONFIG(quick_listview) && QT_CONFIG(quick_draganddrop)
 #include <QtQuickDialogs2QuickImpl/private/qquickplatformfontdialog_p.h>
 #include <QtQuickDialogs2QuickImpl/private/qquickfontdialogimpl_p.h>
+#endif
 
 QT_BEGIN_NAMESPACE
 
@@ -183,8 +185,10 @@ void QQuickFontDialog::onShow(QPlatformDialogHelper *dialog)
         fontDialog->setOptions(m_options); // setOptions only assigns a member and isn't virtual
         fontDialog->setCurrentFont(m_selectedFont);
     }
+#if QT_CONFIG(quick_listview) && QT_CONFIG(quick_draganddrop)
     if (QQuickPlatformFontDialog *fontDialog = qobject_cast<QQuickPlatformFontDialog *>(dialog))
         fontDialog->dialog()->setPopupType(m_popupType);
+#endif
 
     QQuickAbstractDialog::onShow(dialog);
 }
